# rqbit-fuse

./: .done  .gitignore  AGENTS.md  Agents.md  CHANGELOG.md  Cargo.toml  Dockerfile  FIXES.md  IDEAS.md  LOOP.md  README.md  SIMPLIFY-2.md  SIMPLIFY.md  SPEC-TODO.md  TASKS.md  TODO.md  a  deny.toml  loop.sh  ralph.md  review-r1.md  review-r2.md  review-r3.md  review-r4.md  session-ses_3a1a.md  shell.nix
.github/: dependabot.yml
benches/: performance.rs
migration/: SIMPLIFY-003-main-helpers.md  SIMPLIFY-004-fuse-logging.md  SIMPLIFY-006-torrent-discovery.md  SIMPLIFY-007-inode-allocation.md  SIMPLIFY-013-tracing-instrument.md  SIMPLIFY-014-request-helpers.md  phase-1-code-removal.md  phase-2-testing.md  phase-3-verification.md
reference/: README.md
research/: asyncfuseworker-simplification.md  base64_usage_verification.md  bitfield-cache-analysis.md  cache-design.md  cache-wrapper-analysis.md  child-process-cleanup.md  circuit_breaker_analysis_decision.md  circuit_breaker_review.md  client-split.md  config-fields-usage.md  config-validation-analysis.md  config_env_macro.md  config_fields_usage_analysis.md  config_flattening.md  config_merge_consolidation.md  doc-standards.md  error-design.md  error-usage-analysis.md  error_types_merge_analysis.md  file-splitting-strategy.md  fuse-macro-usage.md  fuse-testing-spec-review.md  handle_state_tracking_review.md  inode-design.md  inode_types_consolidation_analysis.md  metrics-race-condition.md  metrics-usage-analysis.md  metrics_review.md  prefetching-analysis.md  proptest_usage_verification.md  read-ahead.md  rqbit-authentication.md  signal-handling.md  status-monitoring-analysis.md  streaming-implementation.md  streaming-tests-analysis.md  strum_usage_verification.md  windows-build-support.md
spec/: README.md  api.md  architecture.md  async-fuse.md  cache.md  error-handling.md  inode-design.md  public-api.md  quickstart.md  read-ahead.md  roadmap.md  signal-handling.md  streaming-api.md  technical-design.md  testing.md
src/: cache.rs  error.rs  lib.rs  main.rs  metrics.rs  mount.rs  sharded_counter.rs
(+79 files in other folders)
