[package]
name = "torrent-fuse"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A FUSE filesystem for accessing torrents via rqbit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/torrent-fuse"

[dependencies]
fuser = "0.14"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.5"
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive", "env"] }
libc = "0.2"
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.9"
wiremock = "0.6"

[[bin]]
name = "torrent-fuse"
path = "src/main.rs"

[lib]
name = "torrent_fuse"
path = "src/lib.rs"
