[package]
name = "rqbit-fuse"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A FUSE filesystem for accessing torrents via rqbit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rqbit-fuse"

[dependencies]
fuser = "0.14"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.5"
dashmap = "5.5"
moka = { version = "0.12", features = ["future"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive", "env"] }
libc = "0.2"
toml = "0.8"
dirs = "5.0"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.9"
wiremock = "0.6"
criterion = { version = "0.5", features = ["async_tokio"] }
futures = "0.3"
unicode-normalization = "0.1"

[[bin]]
name = "rqbit-fuse"
path = "src/main.rs"

[lib]
name = "rqbit_fuse"
path = "src/lib.rs"
